# noir-benchmarks

./: .gitignore  README.md  devbox.json
.github/workflows/: benchmark.yml
circuits/jwt-swiyu/: Nargo.toml  Prover.toml  benchmark-20260527_112558.csv  benchmark-20260527_131900.csv
circuits/jwt-swiyu/src/: constants.nr  main.nr
circuits/mdoc-cbor/: Nargo.toml
circuits/mdoc-cbor/src/: cbor.nr
circuits/mdoc-swiyu/: Nargo.toml  Prover.toml  benchmark-20260520_155705.csv  benchmark-20260527_131846.csv
circuits/mdoc-swiyu/src/: constants.nr  cose.nr  date.nr  main.nr  mso.nr
data/: device.prv  issuer.prv  swiyu-eid.json  swiyu_IssuerSigned.cbor
scripts/: plot_benchmark.py
tools/: Cargo.toml  clippy.toml
tools/src/: cbor.rs  config.rs  error.rs  io.rs  lib.rs  main.rs
tools/src/cli/: bench.rs  common.rs  jwt.rs  mod.rs
tools/src/cli/mdoc/: build.rs  mod.rs  witness.rs
tools/src/credential/: jwt.rs  mod.rs  swiyu.rs
tools/src/crypto/: cose.rs  curve.rs  keys.rs  mod.rs
tools/src/format/: cbor.rs  mod.rs  noir.rs  prover.rs
tools/src/mdoc/: fields.rs  mod.rs  mso.rs  wire.rs  witness.rs
